force-app BACKUP_DELETE/main/default/objects/Position__c/fields/Fullfilment_Date_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fullfilment_Date_Limit__c</fullName>
    <label>Fulfillment Date Limit</label>
    <type>Date</type>
</CustomField>